src/app/render/render.component.css
div {
    display: flex;
}

.ir-render {
    flex-direction: column;
    height: calc(100vh - 6vh); /* header height */
    overflow: auto;
}

.ir-render-title {
    justify-content: center;
    text-align: center;
    margin: 4vh 0 2vh 0;
    font-size: 2vw;
    font-weight: 500;
}

.ir-render-subtitle {
    justify-content: center;
    text-align: center;
    margin: 0vh 0 2vh 0;
    font-size: 1.6vw;
    font-weight: 300;
}

.ir-render-presentation {
    height: 70vh;
    /* very difficult calculations*/
    padding: 2vh 1.2vw;
}

.ir-render-selected-project {
    position: relative;
    flex-direction: column;
    justify-content: flex-start;
    width: 80vw;
    box-sizing: border-box;
}

.ir-render-selected-project-title {
    position: absolute;
    width: 100%;
    height: 10%;
    font-size: 1.6vw;
    font-weight: 500;
    box-sizing: border-box;
    padding: 1vh 1.2vw;
    background: #000;
    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 0) 100%);
    color: white;
}

.ir-render-selected-project img {
    max-width: 100%;
    max-height: 100%;
}

.ir-render-selected-project-arrow {
    position: absolute;
    justify-content: center;
    align-items: center;
    top: 50%;
    transform: translateY(-50%) scaleX(0.5);
    width: 6vw;
    height: 3vw;
    /* border-radius: 50%; */
    font-size: 5vw;
    font-weight: 300;
    cursor: pointer;
    background-color: #ccc;
    transition: 0.3s ease-in-out;
}

.ir-render-selected-project-arrow:hover {
    background-color: #888;
    color: #fff
}

.ir-render-selected-project-arrow.left {
    left: 2vw;
}

.ir-render-selected-project-arrow.right {
    right: 2vw;
}

.ir-render-projects-list {
    flex-direction: column;
    width: 20vw;
    margin: 0 1.2vw;
    overflow-y: auto;
}

.ir-render-projects-list-project {
    position: relative;
    height: 25vh;
    margin-bottom: 1vh;
}

.ir-render-projects-list-project img {
    max-width: 100%;
    max-height: 100%;
}

.ir-render-projects-list-project-details {
    position: absolute;
    flex-direction: column;
    box-sizing: border-box;
    padding: 0.4vh 0.3vw;
    height: 100%;
    width: 100%;
    background: #fff;
    background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(255, 255, 255, 1) 100%);
    cursor: pointer;
}

.ir-render-projects-list-project-details-name {
    font-size: 1vw;
    font-weight: 500;
}

.ir-render-programs {
    flex-direction: column;
    box-sizing: border-box;
    padding: 1vh 1.2vw;
}

.ir-render-programs-title {
    justify-content: center;
    font-size: 2vw;
    font-weight: 400;
    margin-bottom: 1vh;
}

.ir-render-programs-list {
    flex-direction: column;
}

.ir-render-program {
    justify-content: center;
}

.ir-render-program-logo {
    max-width: 20vw;
    max-height: 30vh;
}

.ir-render-program-details {
    flex-direction: column;
    justify-content: center;
    width: 30vw;
    margin: 0 4.8vw;
}

.ir-render-program-name {
    align-items: inherit;
    text-align: inherit;
    font-size: 1.4vw;
    font-weight: 500;
    margin-bottom: 0.5vh;

    text-decoration: none;
    color: #333;
}

.ir-render-program-description {
    align-items: inherit;
    text-align: inherit;
    font-size: 1.2vw;
    font-weight: 300;
}

.ir-render-program.reverse{
    flex-direction: row-reverse;
}

.ir-render-program.reverse .ir-render-program-details{
    align-items: flex-end;
    text-align: end;
}

.ir-render-rights {
    justify-content: center;
    text-align: center;
    font-size: 0.6vw;
    margin: 1vh 1.2vw;
}

